fix z-index

--- a/wp-content/themes/crypto/components/main_banner/style.css
+++ b/wp-content/themes/crypto/components/main_banner/style.css
@@ -146,6 +146,7 @@
     width: 100%;
     height: 100%;
     overflow: hidden;
+    margin-top: 30px;
     border-radius: 5px;
     -webkit-box-shadow: 0 9px 27px 0 rgba(0,0,0,.77),0 9px 27px 0 rgba(0,0,0,.77);
     box-shadow: 0 9px 27px 0 rgba(0,0,0,.77),0 9px 27px 0 rgba(0,0,0,.77)
